k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-service
  labels:
    app: message-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: message-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: message-service
    spec:
      containers:
      - name: message-service
        image: plivotestrepo.azurecr.io/message-service:v3
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: var-log
          mountPath: /var/logs/message_service
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: 256Mi
            cpu: 200m
      - name: vector
        image: timberio/vector:latest-alpine
        volumeMounts:
        - name: vector-config
          mountPath: /etc/vector/vector.toml
        - name: var-log
          mountPath: /var/logs/message_service
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: 256Mi
            cpu: 200m
      volumes:
      - name: vector-config
        configMap:
          name: vector-config
      - name: var-log
        hostPath:
          path: /var/logs/message_service
