k8s/app-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: message-service-network-policy
spec:
  podSelector:
    matchLabels:
      app: message-service
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: other-app
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: mysql
